resource images, editing

--- a/resource/style/form.css
+++ b/resource/style/form.css
@@ -1,5 +1,41 @@
+/* form */
+.form .form-field {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+}
+
+/* .login-form input {
+  height: 40px;
+  border: none;
+  outline: none;
+  font-size: 15px;
+  color: #333;
+  margin-bottom: 20px;
+} */
+
+.form input[type='submit'] {
+  float: right;
+  background-color: #29586c;
+}
+
+.form input[type='submit']:hover {
+  box-shadow: 2px 2px 5px #555;
+  background-color: #267bb0;
+  cursor: pointer;
+}
+
+.form span > input:hover {
+  box-shadow: 2px 2px 5px #555;
+}
+
 label {
   font-weight: 500;
+}
+
+label.required::after {
+  content: ' *';
+  color: red;
 }
 
 input[type='email'],
@@ -7,7 +43,9 @@ input[type='number'],
 input[type='password'],
 input[type='text'],
 input[type='url'],
-input[type='date'] {
+input[type='date'],
+select,
+textarea {
   background: #f6f8fb;
   outline: none;
   border: 1px solid transparent;
@@ -35,4 +73,5 @@ button {
 .error {
   min-height: 1rem;
   color: #f33;
+  list-style-type: disc;
 }
