--- a/resource/style/common.css
+++ b/resource/style/common.css
@@ -1,7 +1,6 @@
 /* Common styles */
 a {
   text-decoration: none;
-  color: black;
 }
 
 a:hover {
@@ -10,24 +9,16 @@ a:hover {
 }
 
 a.current {
-  color: blue;
+  color: darkblue;
+  font-weight: 500;
 }
 
-.delete::before,
-.edit::before {
-  font-family: 'bootstrap-icons';
-  position: relative;
-  top: 2px;
-  right: 3px;
+.bi-trash3 {
+  color: red;
 }
 
-.delete::before {
-  content: '\F78B';
-  /* color:  */
-}
-
-.edit::before {
-  content: '\F4CA';
+.bi-pencil-square {
+  color: green;
 }
 
 /*  */
@@ -39,17 +30,25 @@ body {
   grid-template-rows: max-content 1fr;
 }
 
-aside.hide {
+#aside.hide {
   position: absolute;
   transform: translateX(-100%);
 }
 
 /* header */
 header#topHeader {
+  display: flex;
+  align-items: center;
   height: 80px;
   padding: 10px 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   grid-column: 1 / 3;
+}
+
+div.user {
+  margin-left: auto;
+  margin-right: 1rem;
+  font-size: 1.2rem;
 }
 
 span#menu {
@@ -65,7 +64,9 @@ span#menu {
 
 /* aside */
 #aside {
-  min-height: calc(100vh - 80px);
+  position: sticky;
+  top: 20px;
+  height: calc(100vh - 80px);
   width: 200px;
   padding: 1.6rem 0.5rem;
   display: flex;
@@ -73,6 +74,7 @@ span#menu {
   row-gap: 5px;
   box-shadow: 2px 0 5px -2px rgba(0, 0, 0, 0.2);
   border-right: 1px solid rgba(0, 0, 0, 0.2);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 #aside > * {
@@ -105,23 +107,45 @@ main h1 {
   margin-top: 0;
 }
 
+/* table */
 table {
   width: 100%;
 }
 
-tbody tr:nth-child(odd) {
-  background-color: #eec5a3;
-}
-
 th,
-tr,
 td {
   padding: 0.2rem;
   border: 0.5px solid rgba(0, 0, 0, 0.3);
 }
 
+thead tr:first-child {
+  background-color: #666;
+  color: aliceblue;
+}
+
+thead th {
+  font-weight: 500;
+}
+
+tr:nth-child(odd) {
+  background-color: #fafafc;
+}
+
+th,
+td {
+  font-size: 1.1rem;
+}
+
 td.action {
   text-align: center;
+}
+
+th.actions {
+  width: 12%;
+}
+
+th.img {
+  width: 100px;
 }
 
 /* media queries */
