--- a/component/head.html
+++ b/component/head.html
@@ -1,9 +1,10 @@
+<base href="http://localhost:8080/cafe/" />
 <!-- bootstrap & icon -->
-<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+<link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
 <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css" />
 <!-- styles -->
-<link rel="stylesheet" href="resource/style/common.css" />
 <link rel="stylesheet" href="resource/style/normalize.css" />
+<link rel="stylesheet" href="resource/style/common.css" />
 <!-- favicon -->
 <link rel="apple-touch-icon" sizes="180x180" href="resource/img/apple-touch-icon.png" />
 <link rel="icon" type="image/png" sizes="32x32" href="resource/img/favicon-32x32.png" />
