--- a/resource/style/success.css
+++ b/resource/style/success.css
@@ -2,14 +2,14 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #dbdbdb;
+  background-color: #f3f3f3;
 }
 
 main {
   border-radius: 2rem;
-  padding: 2rem;
+  padding: 2rem 100px;
   box-shadow: 0px 0px 20px 2px rgba(227, 232, 244);
-  background-color: rgb(247, 247, 247);
+  background-color: #fff;
 }
 
 main p {
